ant4c (YYYY.MM)
  * Increased stack that used at BLAKE3 algorithm to allow calculate
    hashes of inputs with huge (more than 32 KB) length.
  * At implementation of 'SHA3/Keccak' algorithm do not loading whole
    range of data while calculating hash sum of first one.
  * Clang: added workaroung code that prevents optimization that cause
    distortion of the function that calculate 'Keccak' and 'SHA3' sums.
    Previous releases for FreeBSD and OpenBSD systems was build by Clang
    compiler.
  * Added 'operating-system::is-windows-server' and
    'platform::is-windows-server' functions.
  * Added new line after target name while print project help for
    target that do not have 'description'.
  * Added calculation of hash sums according to 'xxh32' and 'xxh64'
    algorithms.
  * Fixed encoding to the UTF16BE and UTF16LE symbols that transforming
    into surrogate pairs.
  * WIN32: fixed using at 'echo' task for scenario when output stream
    redirected to the file by capability of operation system -
    for example: 'ant4c.exe > 1.txt'.

 -- TheVice <TheVice>  DAY, DD MM YYYY HH:MM:SS +/-..

ant4c (2020.09)
  * Introduced support of modules.
  * Functions from the path unit allowed to operate with empty paths.
    Function 'combine' can be used for normalizing path.
  * Increased list of symbols to trim from string at 'string::trim'
    function.
  * Replaced script hash functions with hash length at the names with
    'blake2b', 'blake3', 'keccak' and 'sha3'.
  * Added support of 'blake3' and 'keccak' algorithms at the script
    function 'file::get-checksum'.
  * Added argument for configure algorithm - byte order, hash length,
    to the 'file::get-checksum' function.
  * Added possibility to use external events listener.
  * Added 'loadtasks' task.
  * For POSIX systems added searching of files with '.build' extension,
    if no file provided at command prompt.
  * Added 'path::glob' function.